# psycholinguistic_indicators

./: .gitignore  README.md  pipeline.py  pyproject.toml
data/: dreaddit_depsev.csv
prompts/: few_shot.txt  hidden_cot_few_shot.txt  hidden_cot_zero_shot.txt  zero_shot.txt
src/: classifiers.py  evaluate.py  run_extraction.py  utils.py
