[project]
name = "thesis"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspy>=2.6.27",
    "empath>=0.89",
    "instructor>=1.8.0",
    "litellm[proxy]>=1.75.2",
    "matplotlib>=3.10.3",
    "ollama==0.6.0",
    "pandas>=2.2.3",
    "pickleshare>=0.7.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sns>=0.1",
    "tqdm>=4.67.1",
    "vllm>=0.4.0",
    "pydantic>=2.11.10",
    "tokenizers>=0.22.1",
    "shap>=0.48.0",
    "sentence-transformers>=5.1.1",
    "tabulate>=0.9.0",
    "statsmodels>=0.14.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
